# bill_parser

./: .gitignore  README.md  main.py  pipeline_flow.md  pyproject.toml
reports/: spending_report.md
src/: csv_exporter.py  enrich.py  extractor.py  models.py  parser.py  reporter.py
